# OpenCVCommandLineTool

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg-configuration.json  vcpkg.json
OpenCVCommandLineTool/: BinaryProcessor.cpp  BinaryProcessor.h  CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  FilterProcessor.cpp  FilterProcessor.h  Main.cpp  MyImage.cpp  MyImage.h  MyShape.cpp  MyShape.h  Point.h  Utils.cpp  Utils.h  Workspace.cpp  Workspace.h  YoloModel.cpp  YoloModel.h  YoloModelProcessor.cpp  YoloModelProcessor.h
